src/objects/Docente__c.object
<CustomObject>
    <fields>
        <fullName>ApMaterno__c</fullName>
        <label>Apellido materno</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ApPaterno__c</fullName>
        <label>Apellido paterno</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estatus__c</fullName>
        <label>Estatus</label>
        <picklist>
            <picklistValues>
                <fullName>Activo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactivo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IdInterno__c</fullName>
        <externalId>true</externalId>
        <label>Id Interno</label>
        <length>5</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Nombres__c</fullName>
        <label>Nombres</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Docente</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>IdInterno__c</columns>
        <columns>Nombres__c</columns>
        <columns>ApPaterno__c</columns>
        <columns>ApMaterno__c</columns>
        <columns>Estatus__c</columns>
        <filterScope>Everything</filterScope>
        <label>Todos</label>
    </listViews>
    <nameField>
        <label>Nombre de docente</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Docentes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>